--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         // --- LÓGICA DOS JOGOS ---
         // Corrigido para usar "folder" e incluir "version"
         const games = [
-            { name: "Jogo 1", folder: "Builds/Jogo1", version: "1.0" },
+            { name: "Jogo 1", folder: "Build", version: "1.0" },
             { name: "Jogo 2", folder: "Builds/Jogo2", version: "1.0" },
             { name: "Jogo 3", folder: "Builds/Jogo3", version: "1.0" },
             { name: "Jogo 4", folder: "Builds/Jogo4", version: "1.0" },
