--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             </div>
 
             <div class="jogos-menu">
-                <button class="jogo-btn" onclick="loadGame(0)">Jogo 1</button>
+                <button class="jogo-btn" onclick="loadGame(0)">Tetris</button>
                 <button class="jogo-btn" onclick="loadGame(1)">Jogo 2</button>
                 <button class="jogo-btn" onclick="loadGame(2)">Jogo 3</button>
                 <button class="jogo-btn" onclick="loadGame(3)">Jogo 4</button>
@@ -294,7 +294,7 @@
         // --- LÓGICA DOS JOGOS ---
         // Corrigido para usar "folder" e incluir "version"
         const games = [
-            { name: "Tetris", folder: "Builds/Tetris", version: "1.0" },
+            { name: "Jogo 1", folder: "Builds/Tetris", version: "1.0" },
             { name: "Jogo 2", folder: "Builds/Jogo2", version: "1.0" },
             { name: "Jogo 3", folder: "Builds/Jogo3", version: "1.0" },
             { name: "Jogo 4", folder: "Builds/Jogo4", version: "1.0" },
