--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
             <div class="jogos-menu">
                 <button class="jogo-btn" onclick="loadGame(0)">Tetris</button>
-                <button class="jogo-btn" onclick="loadGame(1)">Jogo 2</button>
+                <button class="jogo-btn" onclick="loadGame(1)">Pac Man</button>
                 <button class="jogo-btn" onclick="loadGame(2)">Jogo 3</button>
                 <button class="jogo-btn" onclick="loadGame(3)">Jogo 4</button>
                 <button class="jogo-btn" onclick="loadGame(4)">Jogo 5</button>
@@ -294,8 +294,8 @@
         // --- LÓGICA DOS JOGOS ---
         // Corrigido para usar "folder" e incluir "version"
         const games = [
-            { name: "Jogo 1", folder: "Builds/Tetris", version: "1.0" },
-            { name: "Jogo 2", folder: "Builds/Jogo2", version: "1.0" },
+            { name: "Tetris", folder: "Builds/Tetris", version: "1.0" },
+            { name: "Jogo 2", folder: "Builds/PacMan", version: "1.0" },
             { name: "Jogo 3", folder: "Builds/Jogo3", version: "1.0" },
             { name: "Jogo 4", folder: "Builds/Jogo4", version: "1.0" },
             { name: "Jogo 5", folder: "Builds/Jogo5", version: "1.0" },
