--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             <div class="jogos-menu">
                 <button class="jogo-btn" onclick="loadGame(0)">Tetris</button>
                 <button class="jogo-btn" onclick="loadGame(1)">Pac Man</button>
-                <button class="jogo-btn" onclick="loadGame(2)">Jogo 3</button>
+                <button class="jogo-btn" onclick="loadGame(2)">Snake</button>
                 <button class="jogo-btn" onclick="loadGame(3)">Jogo 4</button>
                 <button class="jogo-btn" onclick="loadGame(4)">Jogo 5</button>
                 <button class="jogo-btn" onclick="loadGame(5)">Jogo 6</button>
@@ -296,7 +296,7 @@
         const games = [
             { name: "Tetris", folder: "Builds/Tetris", version: "1.0" },
             { name: "Jogo 2", folder: "Builds/PacMan", version: "1.0" },
-            { name: "Jogo 3", folder: "Builds/Jogo3", version: "1.0" },
+            { name: "Jogo 3", folder: "Builds/Snake", version: "1.0" },
             { name: "Jogo 4", folder: "Builds/Jogo4", version: "1.0" },
             { name: "Jogo 5", folder: "Builds/Jogo5", version: "1.0" },
             { name: "Jogo 6", folder: "Builds/Jogo6", version: "1.0" },
