--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         // --- LÓGICA DOS JOGOS ---
         // Corrigido para usar "folder" e incluir "version"
         const games = [
-            { name: "Tetris", folder: "Builds/Tetris", version: "1.0" },
+            { name: "Jogo 1", folder: "Builds/Tetris", version: "1.0" },
             { name: "Jogo 2", folder: "Builds/PacMan", version: "1.0" },
             { name: "Jogo 3", folder: "Builds/Snake", version: "1.0" },
             { name: "Jogo 4", folder: "Builds/Jogo4", version: "1.0" },
