--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
         // Corrigido para usar "folder" e incluir "version"
         const games = [
             { name: "Jogo 1", folder: "Builds/Tetris", version: "1.0" },
-            { name: "Jogo 2", folder: "Builds/Snake", version: "1.0" },
-            { name: "Jogo 3", folder: "Builds/Snake", version: "1.0" },
+            { name: "Jogo 2", folder: "Builds/PacMan", version: "1.0" },
+            { name: "Jogo 3", folder: "Builds/PacMan", version: "1.0" },
             { name: "Jogo 4", folder: "Builds/Jogo4", version: "1.0" },
             { name: "Jogo 5", folder: "Builds/Jogo5", version: "1.0" },
             { name: "Jogo 6", folder: "Builds/Jogo6", version: "1.0" },
