--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <button class="jogo-btn" onclick="loadGame(0)">Tetris</button>
                 <button class="jogo-btn" onclick="loadGame(1)">Pac Man</button>
                 <button class="jogo-btn" onclick="loadGame(2)">Snake</button>
-                <button class="jogo-btn" onclick="loadGame(3)">Jogo 4</button>
+                <button class="jogo-btn" onclick="loadGame(3)">Memory</button>
                 <button class="jogo-btn" onclick="loadGame(4)">Jogo 5</button>
                 <button class="jogo-btn" onclick="loadGame(5)">Jogo 6</button>
             </div>
@@ -296,8 +296,8 @@
         const games = [
             { name: "Jogo 1", folder: "Builds/Tetris", version: "1.0" },
             { name: "Jogo 2", folder: "Builds/PacMan", version: "1.0" },
-            { name: "Jogo 3", folder: "Builds/PacMan", version: "1.0" },
-            { name: "Jogo 4", folder: "Builds/Jogo4", version: "1.0" },
+            { name: "Jogo 3", folder: "Builds/Snake", version: "1.0" },
+            { name: "Jogo 4", folder: "Builds/Memory", version: "1.0" },
             { name: "Jogo 5", folder: "Builds/Jogo5", version: "1.0" },
             { name: "Jogo 6", folder: "Builds/Jogo6", version: "1.0" },
         ];
